@@ -9,7 +9,7 @@ $EM_CONF[$_EXTKEY] = array(
     'title' => 'Table Library',
     'description' => 'This contains a base class which you can use to make your extensions independant from any specific table. And it can be used to make multiple language support with a separate language overlay table.',
     'category' => 'misc',
-    'version' => '0.7.3',
+    'version' => '0.7.4',
     'state' => 'stable',
     'uploadfolder' => 0,
     'createDirs' => '',
